adding last updated timestamp, refresh from BCP does not reallocate tables anymore
